--- a/editable.html
+++ b/editable.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://editor.silex.me/static/2.12/normalize.css" data-silex-static="">
     <link rel="stylesheet" href="https://editor.silex.me/static/2.12/front-end.css" data-silex-static="">
 
-    <style class="silex-style">.gradient {background-image: linear-gradient; background-size: cover; background-position: center; background-attachment: fixed; width: 100px; height: 100px; background: linear-gradient(24deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);}</style>
+    <style class="silex-style">.gradient {background-image: linear-gradient; background-size: cover; background-position: center; background-attachment: fixed; background: linear-gradient(24deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);}</style>
     <script type="text/javascript" class="silex-script"></script>
     <style class="silex-inline-styles">.body-initial {background-color: rgba(202,73,73,1); position: static;}.silex-id-1478366444112-1 {background-color: transparent; position: static; margin-top: -1px;}.silex-id-1478366444112-0 {background-color: transparent; min-height: 100px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1474394621033-3 {position: static; margin-top: -1px; background-color: rgba(90,32,32,1);}.silex-id-1474394621032-2 {background-color: transparent; min-height: 600px; position: relative; margin-left: auto; margin-right: auto;}@media only screen and (max-width: 480px) {.body-initial {background-color: rgba(169,61,61,1);}.silex-id-1478366444112-0 {background-color: transparent;}.silex-id-1474394621032-2 {background-color: transparent;}}</style>
     <title></title>
