--- a/editable.html
+++ b/editable.html
@@ -15,7 +15,7 @@
 
     <style class="silex-style">.gradient {background-image: linear-gradient; background-size: cover; background-position: center; background-attachment: fixed; background: linear-gradient(24deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);}</style>
     <script type="text/javascript" class="silex-script"></script>
-    <style class="silex-inline-styles">.body-initial {background-color: rgba(202,73,73,1); position: static;}.silex-id-1478366444112-1 {background-color: transparent; position: static; margin-top: -1px;}.silex-id-1478366444112-0 {background-color: transparent; min-height: 100px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1474394621033-3 {position: static; margin-top: -1px; background-color: rgba(90,32,32,1);}.silex-id-1474394621032-2 {background-color: transparent; min-height: 600px; position: relative; margin-left: auto; margin-right: auto;}@media only screen and (max-width: 480px) {.body-initial {background-color: rgba(169,61,61,1);}.silex-id-1478366444112-0 {background-color: transparent;}.silex-id-1474394621032-2 {background-color: transparent;}}</style>
+    <style class="silex-inline-styles">.body-initial {background-color: rgba(202,73,73,1); position: static;}.silex-id-1478366444112-1 {background-color: transparent; position: static; margin-top: -1px;}.silex-id-1478366444112-0 {background-color: transparent; min-height: 100px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1474394621033-3 {position: static; margin-top: -1px; background-color: transparent;}.silex-id-1474394621032-2 {background-color: transparent; min-height: 600px; position: relative; margin-left: auto; margin-right: auto;}@media only screen and (max-width: 480px) {.body-initial {background-color: rgba(169,61,61,1);}.silex-id-1478366444112-0 {background-color: transparent;}.silex-id-1474394621032-2 {background-color: transparent;}}</style>
     <title></title>
     
 
@@ -54,6 +54,6 @@
 
 <section data-silex-type="container-element" class="container-element editable-style silex-id-1478366444112-1 section-element prevent-resizable page-page-1 page-homepage paged-element" data-silex-id="silex-id-1478366444112-1" style="">
         <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366444112-0 container-element style-background website-width" data-silex-id="silex-id-1478366444112-0"></div>
-    </section><header data-silex-type="container-element" class="container-element editable-style silex-id-1474394621033-3 section-element prevent-resizable page-page-1 page-homepage paged-element gradient" data-silex-id="silex-id-1474394621033-3" style="">
+    </section><header data-silex-type="container-element" class="container-element editable-style silex-id-1474394621033-3 section-element prevent-resizable page-page-1 page-homepage paged-element" data-silex-id="silex-id-1474394621033-3" style="">
         <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 container-element selected style-background website-width" data-silex-id="silex-id-1474394621032-2"></div>
     </header></body></html>
